--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,11 +5,13 @@ use_frameworks!
 
 def shared_private_pods
     pod 'DJMacros', '~> 0.7.4'
-    pod 'KKCategories', '~> 0.3.2'
+    pod 'KKCategories', '~> 0.3.3'
 end
 
 target 'VisionUIKit_Example' do
     #pod 'VisionUIKit', :path => '../'
+    
+    pod 'JHChainableAnimations', '~> 1.3.0'
     shared_private_pods
     
   target 'VisionUIKit_Tests' do
